# project-kira

./: .gitignore  CLAUDE.md  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml  pr-review.yml
examples/: secrets.yaml  settings.yaml
kira/: __init__.py
kira/channels/: base.py  telegram.py
kira/cli/: main.py  repl.py
kira/config/: loader.py
kira/core/: agent.py  models.py  router.py
kira/core/providers/: __init__.py  anthropic_adapter.py  base.py  openai_compat.py
kira/identity/: loader.py
kira/integrations/: google_auth.py
kira/memory/: sessions.py
kira/skills/: evaluator.py  loader.py
kira/skills/store/: email-triage.md  job-search.md  market-analysis.md  market-briefing.md  morning-briefing.md  price-monitor.md  research-topic.md
kira/tools/: __init__.py  registry.py
kira/tools/builtin/: files.py  finance.py  gmail.py  notes.py  search.py  system.py  terminal.py  web.py
kira/web/: dashboard.html  server.py
tests/: conftest.py  test_config.py  test_dashboard.py  test_identity.py  test_models.py  test_providers.py  test_router.py  test_sessions.py  test_skills.py  test_telegram.py  test_tools.py
